@@ -1,3 +1,13 @@
+2019-07-12  Aakash Jain  <aakash_jain@apple.com>
+
+        [ews-build] Make layout-tests' full_results.json accessible in Buildbot
+        https://bugs.webkit.org/show_bug.cgi?id=199743
+
+        Reviewed by Jonathan Bedard.
+
+        * BuildSlaveSupport/ews-build/steps.py:
+        * BuildSlaveSupport/ews-build/steps_unittest.py: Updated unit-tests.
+
 2019-07-11  Aakash Jain  <aakash_jain@apple.com>
 
         Unreviewed follow-up fix to r247364.
